--- a/.env.example
+++ b/.env.example
@@ -52,9 +52,9 @@ MAIL_MAILER=log
 MAIL_SCHEME=null
 MAIL_HOST=127.0.0.1
 MAIL_PORT=2525
-MAIL_USERNAME=null
-MAIL_PASSWORD=null
-MAIL_FROM_ADDRESS="hello@example.com"
+MAIL_USERNAME="laytonmatheka7@gmail.com"
+MAIL_PASSWORD="qamfnggyldkpbhje"
+MAIL_FROM_ADDRESS="laytonmatheka7@gmail.com"
 MAIL_FROM_NAME="${APP_NAME}"
 
 AWS_ACCESS_KEY_ID=
