--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
-APP_NAME=Laravel
+APP_NAME=Health Management system
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:+xZVng5umhEtLFDsS2g7asmX8MggsgzVaIPs9PL+dw0=
 APP_DEBUG=true
 APP_TIMEZONE=UTC
 APP_URL=http://localhost
@@ -48,14 +48,14 @@ REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
 REDIS_PORT=6379
 
-MAIL_MAILER=log
-MAIL_SCHEME=null
-MAIL_HOST=127.0.0.1
-MAIL_PORT=2525
-MAIL_USERNAME="laytonmatheka7@gmail.com"
-MAIL_PASSWORD="qamfnggyldkpbhje"
-MAIL_FROM_ADDRESS="laytonmatheka7@gmail.com"
-MAIL_FROM_NAME="${APP_NAME}"
+MAIL_MAILER=smtp
+MAIL_HOST='smtp.gmail.com'
+MAIL_PORT='587'
+MAIL_USERNAME='laytonmatheka7@gmail.com'
+MAIL_PASSWORD='qamfnggyldkpbhje'
+MAIL_ENCRYPTION=tls
+MAIL_FROM_ADDRESS='laytonmatheka7@gmail.com'
+MAIL_FROM_NAME=`${APP_NAME}`
 
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
@@ -64,3 +64,8 @@ AWS_BUCKET=
 AWS_USE_PATH_STYLE_ENDPOINT=false
 
 VITE_APP_NAME="${APP_NAME}"
+
+
+TWILIO_SID="AC9e4813d8155fcb2582da88bfd9b6ab6a"
+TWILIO_AUTH_TOKEN="634c61e63cda05c7a4bdd338231492cc"
+TWILIO_PHONE_NUMBER="+14174792063"
